--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/IntegratedProject
+spring.datasource.url=jdbc:postgresql://localhost:5400/IntegratedProject
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Ujjwal1206
+spring.datasource.password=12345
 
 
 
