--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/IntegratedProject
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Ujjwal1206
+spring.datasource.password=puneetsharma
 
 spring.security.oauth2.client.registration.google.client-id=448176032725-iq1iek8gn53c4hvtajk582ts7vte8u9r.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=trNueWKau3UBQh_I1QHiPd80
