--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/IntegratedProject
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Ujjwal1206
-
+spring.datasource.password=puneetsharma
 #Oauth2 configure
 #spring.security.oauth2.client.registration.google.client-id=
 #spring.security.oauth2.client.registration.google.client-secret=
