Revert "Revert "Merge branch 'master' of https://github.com/ujjwal1206/IntegratedProject""
This reverts commit b5ea6aa303e07c4b27bcd7d34cafc85d5b62518c.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5400/IntegratedProject
+spring.datasource.url=jdbc:postgresql://localhost:5432/IntegratedProject
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=Ujjwal1206
 #Oauth2 configure
 #spring.security.oauth2.client.registration.google.client-id=
 #spring.security.oauth2.client.registration.google.client-secret=
@@ -14,3 +14,20 @@ spring.security.oauth2.client.registration.google.client-secret=trNueWKau3UBQh_I
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect 
 
 spring.jpa.hibernate.ddl-auto = update
+
+
+#paytm
+paytm.payment.sandbox.merchantId=zOxkBR56810707216871
+paytm.payment.sandbox.merchantKey=XXyKg75%Hu3jOt5G
+paytm.payment.sandbox.channelId=WEB
+paytm.payment.sandbox.industryTypeId=Retail
+paytm.payment.sandbox.website=WEBSTAGING
+paytm.payment.sandbox.paytmUrl=https://securegw-stage.paytm.in/order/process
+paytm.payment.sandbox.callbackUrl=http://localhost:8080/pgresponse
+paytm.payment.sandbox.details.MID= ${paytm.payment.sandbox.merchantId}
+paytm.payment.sandbox.details.CHANNEL_ID= ${paytm.payment.sandbox.channelId}
+paytm.payment.sandbox.details.INDUSTRY_TYPE_ID= ${paytm.payment.sandbox.industryTypeId}
+paytm.payment.sandbox.details.WEBSITE= ${paytm.payment.sandbox.website}
+paytm.payment.sandbox.details.CALLBACK_URL= ${paytm.payment.sandbox.callbackUrl}
+paytm.email=Enter your Email id
+paytm.mobile=Enter your mobile number
