facebook integration in loginPage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/IntegratedProject
+spring.datasource.url=jdbc:postgresql://localhost:5400/IntegratedProject
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Ujjwal1206
+spring.datasource.password=12345
 #Oauth2 configure
 #spring.security.oauth2.client.registration.google.client-id=
 #spring.security.oauth2.client.registration.google.client-secret=
@@ -31,3 +31,16 @@ paytm.payment.sandbox.details.WEBSITE= ${paytm.payment.sandbox.website}
 paytm.payment.sandbox.details.CALLBACK_URL= ${paytm.payment.sandbox.callbackUrl}
 paytm.email=Enter your Email id
 paytm.mobile=Enter your mobile number
+
+
+
+#security
+spring.security.oauth2.client.registration.facebook.client-id= 1932078996948862
+spring.security.oauth2.client.registration.facebook.client-secret= e234778ef49b6fa0bdbbf85d4dabd346
+#spring.security.oauth2.client.accessTokenUri= https://graph.facebook.com/oauth/access_token
+#spring.security.oauth2.client.userAuthorizationUri= https://www.facebook.com/dialog/oauth
+#spring.security.oauth2.client.tokenName= oauth_token
+#spring.security.oauth2.client.uthenticationScheme= query
+#spring.security.oauth2.client.clientAuthenticationScheme= form
+#spring.security.oauth2.client.resource=
+#spring.security.oauth2.client.userInfoUri= https://graph.facebook.com/me
