--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,19 @@
 			<type>pom</type>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security.oauth.boot</groupId>
+			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>2.1.5.RELEASE</version>
+		</dependency>
 	</dependencies>
+
+
 	<repositories>
 		<repository>
 			<snapshots>
